# HATS

./: .gitignore  main.py  tmp.py
0.HMM_preprocess/: CMakeLists.txt  HMM_pre  Makefile  Structs.h  main.cpp  valid_turn.py  validation.py
1.Embed_Roads/: main.py  road_embedding.model
1_Preprocess/: CMakeLists.txt  main.cpp
2.Make_Data_For_Train/: CMakeLists.txt  Make_Data  Makefile  main.cpp  valid2.py  validation.py  validationLen.py
2_Embedding/: main.py
3.Models/: LSTM_test.ipynb  LSTM_test.py  VelocityPred.py  pred_new.py
3_FeatureLearning/: CMakeLists.txt  dataset.cpp  dataset.h  main.cpp
4.HMM_final/: CMakeLists.txt  HMM_final  Makefile  main.cpp  main_old.cpp  predict.cpp  predict.h
4_Model/: VelocityPred.py
5_Solve/: CMakeLists.txt  main.cpp
Common/: FuncEst.cpp  FuncEst.h  criterion.cpp  criterion.h  csv.cpp  csv.h  definitions.cpp  definitions.h  feature.cpp  feature.h  funcIO.cpp  funcIO.h  general.cpp  general.h  geography.cpp  geography.h  graph.cpp  graph.h  light.cpp  light.h  maths.cpp  maths.h  opCSV.cpp  opCSV.h  predictor.cpp  predictor.h  progress.cpp  progress.h  reads.cpp  reads.h  road.cpp  road.h  safeIO.cpp  safeIO.h  solve.cpp  solve.h  structs.cpp  structs.h  traffic.cpp  traffic.h
Intermediate3.29/: nano.34911.save  validation_pos.py
Intermediate3.30/: anchor.py  validation_pos.py
Intermediate4.2/: validationTurn.py  validation_neg.py  validation_pos.py
Intermediate_before_3.25/: pred.py
LSHMM_only/: CMakeLists.txt  Structs.h  main.cpp
Map/: map_correction.py
RecoveryHistory/: note.txt  record
Tool_Map_Plotting/: PlotAllRoads.py  file.py  main.py
Tool_Plotting/: Porto_Matched.html  file.py  main.py
Tool_Rating/: CMakeLists.txt  main.cpp  rating.py
Tool_Rating_New/: CMakeLists.txt  Makefile  Tool_Rating_New  main.cpp
Tool_Shortest_Path/: CMakeLists.txt  Makefile  Tool_Shortest_Path  main.cpp
